# c--sphinx

./: CMakeLists.txt
examples/hello/: hello.c--  startup.h--  write.h--
src/: asmnemon.h  class.cpp  const.h  debug.cpp  dirlist.h  disasm.cpp  errors.cpp  fs.h  id.h  libobj.cpp  main.cpp  optreg.cpp  outle.cpp  outobj.cpp  outpe.cpp  pointer.cpp  res.cpp  res.h  resname.h  struct.h  switch.cpp  table.h  todo.txt  tok.h  toka.cpp  tokb.cpp  tokc.cpp  toke.cpp  tokr.cpp
src/fastlist/: fastlist.cpp
